# TS-V1

./: .gitignore  Pipfile  README.md  app.py  console.py  controller.py  dao.py  logs.txt  main.py  marketplaces.txt  model.py  products.txt  produto.txt  pyproject.toml  requeriments.txt  requirements.txt  run.py  seller.py  seller_db.py  session.py  test.py  testes_iniciais.py
ATV_Ana/front/: console.py
SellerAlchemy/: console.py
SellerAlchemy/controllers/: seller_controller.py
SellerAlchemy/dao/: seller_dao.py  session.py
SellerAlchemy/models/: seller.py
app/: main.py
app/back/: categories.py  marketplaces.py  products.py  seller.py  utils.py
app/database/: dao.py  models.py  session.py
app/front/: web.py
app/seller/: actions.py  dao.py  exceptions.py  models.py  views.py
app/static/: phone_mask.js
app/templates/: index.html  layout.html
back/dao/: base_dao.py  (+5 more)
controller/: base.py  base_controller.py  controller_base.py  controller_seller.py  seller.py  seller_controller.py
controllers/: base_controller.py  seller_controller.py
dao/: base.py  base_dao.py  dao_base.py  dao_seller.py  seller.py  seller_dao.py  seller_dao[v1].py  session.py
front/: web.py
frontend/: console.py  web.py
luciana/: requirements.txt
model/: base_model.py  model_base.py  model_seller.py  seller_model.py  seller_model[v1].py
models/: base.py  base_model.py  seller.py
tests/: base_controller_tests.py  base_dao_tests.py  base_model_tests.py  controller.py  dao.py  models.py  seller_controller_tests.py  seller_dao_tests.py  seller_model_tests.py
(+216 files in other folders)
